tdf#158171: fix crash when double-clicking DeepL translation dialog OK button

Change-Id: I4954357c59c7134d882fb19e9949ecbd5d60345a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159322
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>